--- a/app/views/objectives/stage3.html.erb
+++ b/app/views/objectives/stage3.html.erb
@@ -50,19 +50,19 @@
               <div class="collapse steps in" id="ASWI">
                 <table class="table">
                   <tr>
+                    <th class="text-center"><%= t('.important') %></th>
                     <th><%= t('.name') %></th>
                     <th><%= t('.actor_type') %></th>
                     <th><%= t('.support') %></th>
                     <th><%= t('.influence') %></th>
-                    <th class="text-center"><%= t('.important') %></th>
                     <th class="text-center"><%= t('.actions') %></th>
                   </tr>
                   <tr ng-repeat="actor in actors">
+                    <td class="text-center"><a href=""><i class="fa fa-star" ng-if="actor.important"></i></a></td>
                     <td>{{ actor.name }}</td>
                     <td>{{ actor.actor_type }}</td>
                     <td>{{ get_support_name (actor.support) }}</td>
                     <td>{{ get_influence_name (actor.influence) }}</td>
-                    <td class="text-center"><a href=""><i class="fa fa-check-square" ng-if="actor.important"></i></a></td>
                     <td class="text-center"><a href="#" title="Edit" ng-click="add_edit_actor(actor)"><i class="fa fa-pencil-square-o"></i></a> <a href="#" title="Delete" ng-click="delete_actor(actor)"><i class="fa fa-trash"></i></a></td>
                   </tr>
                 </table>
