corrige cambio de color en landing

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -409,6 +409,7 @@ table .fa-star, table .fa-check {
 .testimonial td {
   width: 50%;
   overflow: hidden;
+  color: #ffffff;
 }
 .testimonial p {
   margin: 20px;
