--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -31,7 +31,7 @@
           </thead>
           <tbody>
             <tr title="{{ project.description | limitTo: 140 }}" ng-repeat="project in projects">
-              <td>{{ project.title }}</td>
+              <td><a href="/projects/{{ project.id }}" target="_self">{{ project.title }}</a></td>
               <td>{{ project.focus_area }}</td>
               <td class="text-right nowrap">
                 <i class="fa fa-gears" ng-click="add_edit_project(project)"></i>
