--- a/app/views/projects/stage1.html.erb
+++ b/app/views/projects/stage1.html.erb
@@ -52,7 +52,7 @@
             </div>
             <div id="policy-problems">
               <div class="bg_grey" ng-if="problem.id">
-                  <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_policy()"><%= t('.add_button') %></button>
+                  <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_policy()"><i class="fa fa-plus-circle"></i> <%= t('.add_button') %></button>
                   <h4><%= t('.subtitle2') %> <span ng-if="policies"><i class="fa fa-info-circle" title="<%= t('.subtitle2_tooltip') %>"></i></span></h4>
               </div>
             </div>
@@ -63,7 +63,7 @@
             <div class="panel panel-default objetives" ng-repeat="policy in policies">
               <div class="panel-heading">
                 <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_policy(policy.id)"><%= t('.edit_button') %></button>
-                <button type="button" class="btn btn-warning pull-right" ng-click="delete_policy(policy)"><%= t('.delete_button') %></button>
+                <button type="button" class="btn btn-warning pull-right" ng-click="delete_policy(policy)"><i class="fa fa-trash"></i></button>
                 <h4 class="panel-title"><a data-toggle="collapse" href="#objetive-{{policy.id}}" aria-expanded="false" aria-controls="collapseExample">{{ policy.title }}</a></h4>
               </div>
               <!-- policy solutions -->
