--- a/app/views/projects/stage1.html.erb
+++ b/app/views/projects/stage1.html.erb
@@ -28,7 +28,6 @@
         <ul class="nav nav-tabs" role="tablist">
           <li role="presentation" class="active"><a href="#data" aria-controls="data" role="tab" data-toggle="tab"><%= t('.data_entry') %></a></li>
           <li role="presentation"><a href="#explanation" aria-controls="explanation" role="tab" data-toggle="tab"><%= t('.explanation_examples') %></a></li>
-          <li role="presentation"><a href="#tips" aria-controls="tips" role="tab" data-toggle="tab"><%= t('.workshop_tips') %></a></li>
         </ul>
         <!-- tab panes -->
         <div class="tab-content" ng-controller="stage1Ctrl">
@@ -62,13 +61,13 @@
             <!-- policy solution -->
             <div class="panel panel-default objetives" ng-repeat="policy in policies">
               <div class="panel-heading">
-                <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_policy(policy.id)"><%= t('.edit_button') %></button>
+                <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_policy(policy.id)"><i class="fa fa-pencil"></i></button>
                 <button type="button" class="btn btn-warning pull-right" ng-click="delete_policy(policy)"><i class="fa fa-trash"></i></button>
                 <h4 class="panel-title"><a data-toggle="collapse" href="#objetive-{{policy.id}}" aria-expanded="false" aria-controls="collapseExample">{{ policy.title }}</a></h4>
               </div>
               <!-- policy solutions -->
               <div class="collapse in" id="objetive-{{policy.id}}">
-                <button type="button" class="btn btn-info pull-right" ng-click="add_edit_solution(policy.id)"><%= t('.add_button') %></button>
+                <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_solution(policy.id)"><i class="fa fa-plus-circle"></i> <%= t('.add_button') %></button>
                 <h4><%= t('.subtitle3') %> <span ng-if="policy.solutions"><i class="fa fa-info-circle" title="<%= t('.subtitle3_tooltip') %>"></i></span></h4>
                 <p ng-if="policy.solutions.length == 0">
                   <%= t('.subtitle3_tooltip') %>
