--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -9,6 +9,10 @@ body {
 body.home {
   background-color: #ffffff;
 }
+.row, section {
+  margin-left: 15px;
+  margin-right: 15px;
+}
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   color: #00385A;
   font-weight: 300;
@@ -126,6 +130,9 @@ table a {
   background-color: #0091EA;
   border-color: #0091EA;
   border-radius: 0px;
+}
+.navbar-default .navbar-collapse, .navbar-default .navbar-form {
+    margin-top: 8px;
 }
 .navbar-default .navbar-toggle .icon-bar {
   background-color: #fff;
@@ -388,6 +395,10 @@ table .fa-star, table .fa-check {
   padding: 10px;
   min-width: 228px;
 }
+.dropdown-menu {
+  right: 0;
+  left: auto;
+}
 .benefits{
   margin: 50px 0;
   text-align: center;
@@ -432,12 +443,13 @@ table .fa-star, table .fa-check {
   width: 100%;
 }
 .banner {
-  background: image-url("banner.jpg") no-repeat center center fixed; 
+  background: image-url("banner.jpg") no-repeat center center; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   padding: 50px 0;
+  margin: -15px 0;
 }
 .banner .container {
   /* Fallback for web browsers that doesn't support RGBa */
