--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -14,7 +14,7 @@ body.home {
   margin-right: 15px;
 }
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
-  color: #00385A;
+  color: #575757;
   font-weight: 300;
 }
 h2, .h2 {
