fijar ancho a col project name  en table

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -24,7 +24,7 @@
         <table class="table table-stripped">
           <thead>
             <tr>
-              <th><%= t('.project') %></th>
+              <th width="60%"><%= t('.project') %></th>
               <th><%= t('.focus_area') %></th>
               <th class="text-right"><%= t('.actions') %></th>
             </tr>
