--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -260,11 +260,11 @@ h4.panel-title {
 }
 .collapse.in {
   background-color: #FFF;
-  padding: 10px;
+  padding: 10px 10px 0px 10px;
   margin-top: 15px;
   margin-bottom: 15px;
 }
-.regular {
+.collapse h4.regular {
   font-weight: 500px;
 }
 .panel-default > .panel-heading {
