--- a/app/views/projects/stage1.html.erb
+++ b/app/views/projects/stage1.html.erb
@@ -12,15 +12,7 @@
 
 <div class="container main">
   <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 stage_menu">
-      <h3><%= t('.title') %></h3>
-      <ul class="nav nav-stacked">
-        <li class="active"><a href="#"><i class="fa fa-check-circle"></i> <%= t('.subtitle1') %></a></li>
-        <li><a href="#"><i class="fa fa-check-circle"></i> <%= t('.subtitle2') %></a></li>
-        <li><a href="#"><i class="fa fa-check-circle"></i> <%= t('.subtitle3') %></a></li>
-      </ul>
-    </div>
-    <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
       <h2><%= t('.title') %></h2>
       <p><%= t('.description') %></p>
       <div role="tabpanel" class="tabpanel">
@@ -51,13 +43,20 @@
             </div>
             <div id="policy-problems">
               <div class="bg_grey" ng-if="problem.id">
+                  <button type="button" class="btn btn-primary pull-right" data-toggle="tooltip" data-placement="left" title="<%= t('.subtitle2_tooltip') %>"><i class="fa fa-info"></i></button>
                   <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_policy()"><i class="fa fa-plus-circle"></i> <%= t('.add_button') %></button>
-                  <h4><%= t('.subtitle2') %> <span ng-if="policies"><i class="fa fa-info-circle" title="<%= t('.subtitle2_tooltip') %>"></i></span></h4>
+                  <h4><%= t('.subtitle2') %></h4>
+                  <script>
+                    $(function () {
+                        $('[data-toggle="tooltip"]').tooltip()
+                      })
+                  </script>
               </div>
             </div>
             <p ng-if="!policies">
               <%= t('.policies_text') %>
             </p>
+            <div class="contenedor">
             <!-- policy solution -->
             <div class="panel panel-default objetives" ng-repeat="policy in policies">
               <div class="panel-heading">
@@ -87,6 +86,7 @@
               <!-- end of policy solutions -->
             </div>
             <!-- end of policy solution -->
+            </div>
             <%= render 'policy_modal' %>
             <!-- solution modal -->
             <%= render 'solution_modal' %>
