--- a/app/views/projects/_user_permission_modal.erb
+++ b/app/views/projects/_user_permission_modal.erb
@@ -5,17 +5,17 @@
   <div class="modal-body">
     <form>
       <div class="form-group">
-        <label for="users">People</label>
-        <input type="text" class="form-control" name="users" placeholder="Add email accounts sepparated by commas">
+        <label for="share_users">People</label>
+        <input type="text" class="form-control" name="share_users" ng-model="share.share_users" placeholder="Add email accounts sepparated by commas">
       </div>
       <div class="form-group">
         <label for="message">Message</label>
-        <textarea class="form-control" name="message" placeholder="Add a note"></textarea>
+        <textarea class="form-control" name="message" ng-model="share.message" placeholder="Add a note"></textarea>
       </div>
       <div class="form-group">
         <label for="share">Share with</label>
-        <ul>
-          <li></li>
+        <ul ng-repeat="member in current_project.members">
+          <li>{{ member.email }}</li>
         </ul>
       </div>
     </form>
