--- a/app/views/layouts/sandboxes_test.html.erb
+++ b/app/views/layouts/sandboxes_test.html.erb
@@ -9,18 +9,18 @@
     <%= stylesheet_link_tag 'bpmn', media: 'all', 'data-turbolinks-track' => true %>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Asap:400,700' rel='stylesheet' type='text/css'>
-    <!-- Latest compiled and minified CSS -->
+    <!-- latest compiled and minified css -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <%= stylesheet_link_tag 'style', media: 'all', 'data-turbolinks-track' => true %>
     <script>
-        var interactive_status = true
+      var interactive_status = true
     </script>
     <% if(!@owner) %>
     <style>
-        .link-tools {
-            display: none;
-        }
+      .link-tools {
+        display: none;
+      }
     </style>
     <% end %>
   </head>
@@ -29,7 +29,7 @@
 
     </header>
     <main role="main">
-        <%= yield %>
+      <%= yield %>
     </main>
 
     <%= javascript_include_tag 'sandboxes', 'data-turbolinks-track' => true %>
