--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,27 +1,27 @@
 <%# navigation styled for Bootstrap 3.0 %>
 <nav class="navbar navbar-inverse navbar-fixed-top">
-	<a class="company-logo" href="/sandboxes">Wizard</a><span class="tagline">beta</span>
-	<!-- Top Menu Items -->
-    <% if( user_signed_in? ) %>
-    <ul class="nav navbar-right top-nav" data-step="3" data-intro="This is the user navigation menu">
-        <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Bienvenido, <%= current_user.email %> <b class="caret"></b></a>
-            <ul class="dropdown-menu">
-                <li>
-                    <a href="/sandboxes"><i class="fa fa-fw fa-inbox"></i> Sandboxes</a>
-                </li>
-                <li class="divider"></li>
-                <li>
-                    <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
-                </li>
-            </ul>
+  <a class="company-logo" href="/sandboxes">Wizard</a><span class="tagline">beta</span>
+  <!-- top menu items -->
+  <% if( user_signed_in? ) %>
+  <ul class="nav navbar-right top-nav" data-step="3" data-intro="This is the user navigation menu">
+    <li class="dropdown">
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Bienvenido, <%= current_user.email %> <b class="caret"></b></a>
+      <ul class="dropdown-menu">
+        <li>
+          <a href="/sandboxes"><i class="fa fa-fw fa-inbox"></i> Sandboxes</a>
         </li>
-    </ul>
-    <% end %>
-    <%= render 'layouts/navigation_links' %>
-    <div class="container">
-        <div class="clearfix toolbarName">
-            <%= yield(:navbar) %>
-        </div>
+        <li class="divider"></li>
+        <li>
+          <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
+        </li>
+      </ul>
+    </li>
+  </ul>
+  <% end %>
+  <%= render 'layouts/navigation_links' %>
+  <div class="container">
+    <div class="clearfix toolbarName">
+      <%= yield(:navbar) %>
     </div>
+  </div>
 </nav>
