--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,12 +24,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Wizard <span>Beta</span></a>
+          <a class="navbar-brand" href="<%= root_path %>">Wizard <span>Beta</span></a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/" target="_self">Home</a></li>
+            <li class="active"><a href="<%= root_path %>" target="_self">Home</a></li>
             <li><a href="<%= projects_path %>" target="_self">Projects</a></li>
             <li><a href="#">Documents</a></li>
             <li><a href="#">Tools</a></li>
