--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -29,7 +29,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/" target="_self">Home</a></li>
+            <li class="active"><a href="<%= root_path %>" target="_self">Home</a></li>
             <li><a href="<%= projects_path %>" target="_self">Projects</a></li>
             <li><a href="#">Documents</a></li>
             <li><a href="#">Tools</a></li>
