se cambia script para tooltips a application.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,11 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <script src="//cdn.datatables.net/1.10.5/js/jquery.dataTables.min.js"></script>
+    <script>
+      $(function () {
+          $('[data-toggle="tooltip"]').tooltip()
+        })
+    </script>
     <%= csrf_meta_tags %>
   </head>
   <body ng-app="wizard-steps" >
