--- a/app/views/projects/stage1.html.erb
+++ b/app/views/projects/stage1.html.erb
@@ -28,7 +28,9 @@
               <!-- <button type="button" class="btn btn-warning pull-right">Edit</button> -->
               <button type="button" class="btn btn-primary pull-right" data-toggle="tooltip" data-placement="left" title="<%= t('.subtitle1_tooltip') %>"><i class="fa fa-info"></i></button>
               <button type="button" class="btn pull-right" ng-class="{'btn-warning': problem.id, 'btn-info': !problem.id}" ng-click="add_step_one(problem)">{{ btn_problem }}</button>
-              <h4><%= t('.subtitle1') %></h4>
+              <h4><i class="fa fa-circle"></i> <%= t('.subtitle1') %></h4>
+            </div>
+            <div class="contenedor">
               <p ng-if="!problem.id">
                 <%= t('.subtitle1_explanation') %>
               </p>
@@ -46,7 +48,7 @@
               <div class="bg_grey" ng-if="problem.id">
                   <button type="button" class="btn btn-primary pull-right" data-toggle="tooltip" data-placement="left" title="<%= t('.subtitle2_tooltip') %>"><i class="fa fa-info"></i></button>
                   <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_policy()"><i class="fa fa-plus-circle"></i> <%= t('.add_button') %></button>
-                  <h4><%= t('.subtitle2') %></h4>
+                  <h4><i class="fa fa-circle"></i>  <%= t('.subtitle2') %></h4>
               </div>
             </div>
             <p ng-if="!policies">
