--- a/app/views/objectives/stage3.html.erb
+++ b/app/views/objectives/stage3.html.erb
@@ -12,15 +12,7 @@
 
 <div class="container main">
   <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 stage_menu">
-      <h3><%= t('.title') %></h3>
-      <ul class="nav nav-stacked">
-        <li class="active"><a href="#"><i class="fa fa-check-circle"></i> <%= t('.subtitle1') %></a></li>
-        <li><a href="#"><i class="fa fa-check-circle"></i> <%= t('.subtitle2') %></a></li>
-        <li><a href="#"><i class="fa fa-check-circle"></i> <%= t('.subtitle3') %></a></li>
-      </ul>
-    </div>
-    <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
       <h2><%= t('.title') %></h2>
       <p><%= t('.title_description') %></p>
 
@@ -34,21 +26,17 @@
         <div class="tab-content" ng-controller="stage3Ctrl">
           <div role="tabpanel" class="tab-pane active" id="data">
             <div class="bg_grey">
-              <h4><%= t('.subtitle1') %></h4>
-              <p><%= t('.subtitle1_explanation') %></p>
-              <a href="/sandboxes/new" target="_self" class="btn btn-warning"><i class="fa fa-pencil"></i> <%= t('.draw_sandbox_button') %></a>
+                <button type="button" class="btn btn-primary pull-right" data-toggle="tooltip" data-placement="left" title="<%= t('.subtitle1_explanation') %>"><i class="fa fa-info"></i></button>
+              <a href="/sandboxes/new" target="_blank" class="btn btn-warning pull-right"><i class="fa fa-sitemap"></i> <%= t('.draw_sandbox_button') %></a>
+              <h4><i class="fa fa-circle"></i> <%= t('.subtitle1') %></h4>
             </div>
             <div class="bg_grey">
-              <h4 id="actors"><%= t('.subtitle2') %></h4>
-              <p><%= t('.subtitle2_explanation') %></p>
-              <button type="button" class="btn btn-warning" ng-click="add_edit_actor()"><%= t('.add_actor_button') %></button>
+              <button type="button" class="btn btn-primary pull-right" data-toggle="tooltip" data-placement="left" title="<%= t('.subtitle2_explanation') %>"><i class="fa fa-info"></i></button>
+              <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_actor()"><i class="fa fa-user"></i> <%= t('.add_actor_button') %></button>
+              <h4 id="actors"><i class="fa fa-circle"></i> <%= t('.subtitle2') %></h4>
             </div>
-            <div class="panel panel-default">
-              <div class="panel-heading table_goals">
-                <a data-toggle="collapse" href="#ASWI" aria-expanded="false" aria-controls="collapseExample"><%= t('.all_actors') %></a>
-              </div>
-              <div class="collapse steps in" id="ASWI">
-                <table class="table">
+            <div class="contenedor">
+              <table class="table">
                   <tr>
                     <th class="text-center"><%= t('.important') %></th>
                     <th><%= t('.name') %></th>
@@ -66,7 +54,6 @@
                     <td class="text-center"><a href="#" title="Edit" ng-click="add_edit_actor(actor)"><i class="fa fa-pencil-square-o"></i></a> <a href="#" title="Delete" ng-click="delete_actor(actor)"><i class="fa fa-trash"></i></a></td>
                   </tr>
                 </table>
-              </div>
             </div>
             <div class="bg_grey" id="factors-barriers">
               <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_enabling_factor()"><%= t('.add_enabling_factor_button') %></button>
