--- a/app/views/objectives/stage3.html.erb
+++ b/app/views/objectives/stage3.html.erb
@@ -61,7 +61,7 @@
               <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_barrier()"><i class="fa fa-plus-circle"></i> <%= t('.add_barrier_button') %></button>
               <h4><i class="fa fa-circle"></i> <%= t('.subtitle3') %></h4>
             </div>
-          <div class="contenedor">
+          <div class="contenedor"></div>
             <div class="panel panel-default">
               <div class="panel-heading table_goals">
                 <a data-toggle="collapse" aria-expanded="false" aria-controls="collapseExample"><%= t('.barriers') %></a>
@@ -100,7 +100,6 @@
                 </table>
               </div>
             </div>
-          </div>
             <%= render "actors_modal" %>
             <%= render "factors_modal" %>
             <%= render "barriers_modal" %>
