--- a/app/views/objectives/stage3.html.erb
+++ b/app/views/objectives/stage3.html.erb
@@ -20,7 +20,12 @@
         <li><a href="#"><i class="fa fa-check-circle"></i> <%= t('.subtitle3') %></a></li>
       </ul>
     </div>
-    <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
+    <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9" ng-controller="stage3Ctrl">
+      <div class="alert" role="alert" ng-class="messages.response?'alert-success':'alert-danger'" ng-if="messages.message">
+        <button ng-click="dismiss_modal()" type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        {{ messages.message }}
+      </div>
+
       <h2><%= t('.title') %></h2>
       <p><%= t('.title_description') %></p>
 
@@ -31,7 +36,7 @@
           <li role="presentation"><a href="#explanation" aria-controls="explanation" role="tab" data-toggle="tab"><%= t('.explanation_examples') %></a></li>
         </ul>
         <!-- tab panes -->
-        <div class="tab-content" ng-controller="stage3Ctrl">
+        <div class="tab-content">
           <div role="tabpanel" class="tab-pane active" id="data">
             <div class="bg_grey">
               <h4><%= t('.subtitle1') %></h4>
