--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,15 +68,11 @@
     <footer>
       <div class="container">
         <div class="row">
-          <div class="col-xs-6 col-sm-6 col-md-8 col-lg-8">
+          <div class="col-xs-6 col-sm-6 col-md-8 col-lg-4">
             <p class="brand" href="#">Wizard <span>Beta</span></p>
-            <div class="row">
-              <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec .</p>
               </div>
-            </div>
-          </div>
-          <div class="col-xs-6 col-sm-6 col-md-4 col-lg-4">
+          <div class="col-xs-6 col-sm-6 col-md-4 col-lg-4 col-md-offset-4 col-lg-offset-4">
             <h5>Contact</h5>
             <p><i class="fa fa-phone-square"></i> +56 2 2419 2770</p>
             <p><i class="fa fa-envelope"></i> <a href="">Press Contact</a></p>
