Cambios estéticos Stage 6 CSS + HTML

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -30,6 +30,10 @@ input, button, select, textarea {
 select {
   padding: 5px;
 }
+table .fa-pencil-square-o, table .fa-trash {
+  color: #0091EA;
+  cursor: pointer;
+}
 .btn {
   border-radius: 15px;
   font-weight: 300;
@@ -443,11 +447,7 @@ div#resources_paginate {
   width: 100%;
 }
 .banner {
-<<<<<<< HEAD
   background: image-url("banner.jpg") no-repeat center center; 
-=======
-  background: image-url("banner.jpg") no-repeat center center fixed;
->>>>>>> dev
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
