--- a/app/views/objectives/stage4.html.erb
+++ b/app/views/objectives/stage4.html.erb
@@ -18,7 +18,12 @@
         <li class="active"><a href="#"><i class="fa fa-check-circle"></i> <%= t('.subtitle1') %></a></li>
       </ul>
     </div>
-    <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
+    <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9" ng-controller="stage4Ctrl">
+      <div class="alert" role="alert" ng-class="messages.response?'alert-success':'alert-danger'" ng-if="messages.message">
+        <button ng-click="dismiss_modal()" type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        {{ messages.message }}
+      </div>
+
       <h2><%= t('.subtitle1') %></h2>
       <p><%= t('.subtitle1_explanation') %></p>
       <div role="tabpanel" class="tabpanel">
@@ -28,7 +33,7 @@
           <li role="presentation"><a href="#explanation" aria-controls="explanation" role="tab" data-toggle="tab"><%= t('.explanation_examples') %></a></li>
         </ul>
         <!-- tab panes -->
-        <div class="tab-content" ng-controller="stage4Ctrl">
+        <div class="tab-content">
           <div role="tabpanel" class="tab-pane active" id="data">
             <div class="bg_grey">
               <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_outcome()"><%= t('.add_button') %></button>
