get public projects

--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -40,7 +40,10 @@
   height: 400px;
 }
 
-.controllers i {
-  color: #0091EA;
-  cursor: pointer;
+.controllers {
+  text-align: right;
+  i {
+    color: #0091EA;
+    cursor: pointer;
+  }
 }
