--- a/app/views/objectives/_modal_activity.html.erb
+++ b/app/views/objectives/_modal_activity.html.erb
@@ -16,6 +16,12 @@
       <input type="checkbox" name="completion" class="form-control" ng-model="current_activity.completion"></input>
     </div>
     <div class="form-group">
+      <label for="organizer"><%= t('.organizer') %></label>
+      <select class="form-control" name="organizer" ng-model="current_activity.organizer">
+        <option ng-repeat="o in organizer">{{o}}</option>
+      </select>
+    </div>
+    <div class="form-group">
       <label for="scheduling"><%= t('.scheduling') %> (current: {{current_activity.scheduling | date:'MM/dd/yyyy'}})</label>
       <input type="date" name="scheduling" class="form-control" ng-model="current_activity.scheduling" value="{{current_activity.scheduling}}"></input>
     </div>
