--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -17,6 +17,7 @@
     <li role="presentation" class="active"><a href="#stages" aria-controls="stages" role="tab" data-toggle="tab"><%= t('.stages') %></a></li>
     <li role="presentation"><a href="#dashboard" aria-controls="dashboard" role="tab" data-toggle="tab"><%= t('.dashboard') %></a></li>
     <li role="presentation"><a href="#documents" aria-controls="documents" role="tab" data-toggle="tab"><%= t('.documents') %></a></li>
+    <li role="presentation"><a href="./public" aria-controls="overview" role="tab" data-toggle="tab"><%= t('.overview') %></a></li>
   </ul>
 
   <!-- tab panes -->
