--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -511,3 +511,16 @@ div#resources_paginate {
 #policy-problems .bg_grey h4 {
   color: #ffffff;
 }
+.successful {
+  color: #3c763d;
+}
+.neutral {
+  color: #8a6d3b;
+}
+.failed {
+  color: #a94442;
+}
+.well .fa-ul {
+    margin-left: 1.4em;
+    margin-top: 2em;
+}
