--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -183,7 +183,136 @@
         <% end %>
       <% end %>
     </div>
-    <div role="tabpanel" class="tab-pane" id="dashboard">...</div>
+    <div role="tabpanel" class="tab-pane" id="dashboard">
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+          <h2>Activities</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+          <div class="well">
+            <h3>22 Actividades</h3>
+            <ul class="fa-ul">
+              <li class="successful"><i class="fa-li fa fa-check-circle"></i>16 actividades éxitosas</li>
+              <li class="neutral"><i class="fa-li fa fa-minus-circle"></i>5 actividades neutras</li>
+              <li class="failed"><i class="fa-li fa fa-times-circle"></i>1 actividad fallida</li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+          <div class="well text-center">
+            <h3>Porcentaje Actividades Finalizadas</h3>
+            <div class="c100 p20 big">
+                <span>20%</span>
+                <div class="slice">
+                    <div class="bar"></div>
+                    <div class="fill"></div>
+                </div>
+              </div>
+              <div class="clearfix"></div>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+          <div class="well text-center">
+            <h3>Porcentaje de Éxito</h3>
+            <div class="c100 p80 big">
+                <span>80%</span>
+                <div class="slice">
+                    <div class="bar"></div>
+                    <div class="fill"></div>
+                </div>
+              </div>
+              <div class="clearfix"></div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+          <h2>Interim Outcomes</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+          <div class="well">
+            <h3>10 Interim Outcomes</h3>
+            <ul class="fa-ul">
+              <li class="successful"><i class="fa-li fa fa-check-circle"></i>1 outcome sin actividad</li>
+              <li class="neutral"><i class="fa-li fa fa-minus-circle"></i>3 outcome con actividades vencidas</li>
+              <li class="failed"><i class="fa-li fa fa-times-circle"></i>1 outcome sin actividades próximas</li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+          <div class="well text-center">
+            <h3>Porcentaje Interim Outcomes logrados</h3>
+            <div class="c100 p30 big">
+                <span>30%</span>
+                <div class="slice">
+                    <div class="bar"></div>
+                    <div class="fill"></div>
+                </div>
+              </div>
+              <div class="clearfix"></div>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+          <div class="well text-center">
+            <h3>Porcentaje asignación de actividades predefinidas</h3>
+            <div class="c100 p90 big">
+                <span>90%</span>
+                <div class="slice">
+                    <div class="bar"></div>
+                    <div class="fill"></div>
+                </div>
+              </div>
+              <div class="clearfix"></div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+          <h2>Objetives</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+          <div class="well">
+            <h3>8 Objetives</h3>
+            <ul class="fa-ul">
+              <li class="successful"><i class="fa-li fa fa-check-circle"></i>2 Objetives sin interim outcome</li>
+              <li class="neutral"><i class="fa-li fa fa-minus-circle"></i>3 Objetives con actividades fallidas</li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+          <div class="well text-center">
+            <h3>Porcentaje avance objetivos priorizados</h3>
+            <div class="c100 p40 big">
+                <span>40%</span>
+                <div class="slice">
+                    <div class="bar"></div>
+                    <div class="fill"></div>
+                </div>
+              </div>
+              <div class="clearfix"></div>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+          <div class="well text-center">
+            <h3>Porcentaje avance total de objetivos</h3>
+            <div class="c100 p50 big">
+                <span>50%</span>
+                <div class="slice">
+                    <div class="bar"></div>
+                    <div class="fill"></div>
+                </div>
+              </div>
+              <div class="clearfix"></div>
+          </div>
+        </div>
+      </div>
+    </div>
     <div role="tabpanel" class="tab-pane" id="documents">
       <%= render "resources" %>
     </div>
